--- a/src/app/watch/watch.component.html
+++ b/src/app/watch/watch.component.html
@@ -70,8 +70,7 @@
       <mat-grid-list cols="1" rowHeight="2:1">
         <mat-grid-tile class="video-thumbnail" *ngFor="let video of videos" [class.playing]="video.playing"
           [class.watched]="video.watched" [style.backgroundImage]="'url(' + video.media.oembed.thumbnail_url + ')'"
-          [matTooltip]="video.title" (click)="selectVideo(video.youtubeId)"
-          (contextmenu)="openContextMenu($event, video)">
+          [matTooltip]="video.title" (click)="selectVideo(video.youtubeId)">
           <mat-icon>
             {{video.playing ? 'play_arrow' : (video.finished) ? 'done_all' : (video.watched) ? 'visibility' : ''}}
           </mat-icon>
