--- a/src/app/watch/watch.component.scss
+++ b/src/app/watch/watch.component.scss
@@ -67,9 +67,9 @@ mat-drawer {
   background: transparent;
 }
 
-.watched.video-thumbnail:before {
-  // background: rgba(0, 0, 0, 0.66);
-}
+// .watched.video-thumbnail:before {
+//   background: rgba(0, 0, 0, 0.66);
+// }
 
 .playing.video-thumbnail:before {
   background: transparent;
