changing manifest to fullscreen and cleanup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,6 @@ $candy-app-theme: mat-dark-theme(
 body {
   @include dark-scroll-bar;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
