--- a/src/app/watch/video.info.dialog.html
+++ b/src/app/watch/video.info.dialog.html
@@ -10,5 +10,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Close</button>
-  <a mat-button target="_blank" [href]="'https://reddit.com' + video.permalink">View on Reddit</a>
+  <a mat-button cdkFocusInitial target="_blank" [href]="'https://reddit.com' + video.permalink">View on Reddit</a>
 </div>
