--- a/src/app/watch/watch.component.html
+++ b/src/app/watch/watch.component.html
@@ -3,43 +3,43 @@
     <mat-icon>menu</mat-icon>
   </button>
   <div class="banner" (click)="drawer.toggle()">
-    <img src="assets/img/reddit-yt-logo-circle.png">
-    <span *ngIf="!isMobile">Reddit TV</span>
+    <img src="assets/img/Reddit_Lockup_OnDark.png">
+    <!-- <span *ngIf="!isMobile">Reddit TV</span> -->
   </div>
   <span class="spacer"></span>
-  <button mat-icon-button>
+  <button mat-icon-button (click)="playPreviousVideo()" matTooltip="Previous (Shift + ←)">
     <mat-icon>skip_previous</mat-icon>
   </button>
-  <button mat-icon-button (click)="youtubePlayer.seekTo(youtubePlayer.getCurrentTime() - 15, true)">
+  <button mat-icon-button (click)="youtubePlayer.seekTo(youtubePlayer.getCurrentTime() - 15, true)" matTooltip="Rewind (←)">
     <mat-icon>fast_rewind</mat-icon>
   </button>
-  <button mat-icon-button (click)="currentVideo?.playing ? pauseVideo() : playVideo()">
+  <button mat-icon-button (click)="currentVideo?.playing ? pauseVideo() : playVideo()"  [matTooltip]="currentVideo?.playing ? 'Pause (Space)' : 'Play (Space)'">
     <mat-icon>{{currentVideo?.playing ? 'pause' : 'play_arrow'}}</mat-icon>
   </button>
-  <button mat-icon-button (click)="youtubePlayer.seekTo(youtubePlayer.getCurrentTime() + 15, true)">
+  <button mat-icon-button (click)="youtubePlayer.seekTo(youtubePlayer.getCurrentTime() + 15, true)" matTooltip="Fast Forward (→)">
     <mat-icon>fast_forward</mat-icon>
   </button>
-  <button mat-icon-button (click)="playNextVideo()">
+  <button mat-icon-button (click)="playNextVideo()"  matTooltip="Next (Shift + →)">
     <mat-icon>skip_next</mat-icon>
   </button>
-  <button mat-icon-button (click)="youtubePlayer.seekTo(0, true)">
+  <button mat-icon-button (click)="youtubePlayer.seekTo(0, true)" matTooltip="Replay">
     <mat-icon>replay</mat-icon>
   </button>
-  <button mat-icon-button [matMenuTriggerFor]="volumeMenu">
+  <button mat-icon-button [matMenuTriggerFor]="volumeMenu" matTooltip="Volume (↓ / ↑)">
     <mat-icon>volume_up</mat-icon>
   </button>
   <mat-menu #volumeMenu="matMenu">
     <mat-slider vertical [value]="youtubePlayer.getVolume()" (input)="youtubePlayer.setVolume($event.value)">
     </mat-slider>
   </mat-menu>
-  <button mat-icon-button (click)="openVideoInfo()">
+  <button mat-icon-button (click)="openVideoInfo()" matTooltip="Video Info">
     <mat-icon>info</mat-icon>
   </button>
   <button mat-icon-button (contextmenu)="saveMenuClick.openMenu()" [matMenuTriggerFor]="saveMenu"
-    #saveMenuClick="matMenuTrigger">
+    #saveMenuClick="matMenuTrigger" matTooltip="History Options">
     <mat-icon>save</mat-icon>
   </button>
-  <button mat-icon-button (click)="toolbarBottom = !toolbarBottom">
+  <button mat-icon-button (click)="toolbarBottom = !toolbarBottom" [matTooltip]="toolbarBottom ? 'Toolbar to top' : 'Toolbar to bottom'">
     <mat-icon>{{toolbarBottom ? 'expand_less' : 'expand_more'}}</mat-icon>
   </button>
   <mat-menu #saveMenu="matMenu">
@@ -55,7 +55,7 @@
     <div class="drawer-container">
       <mat-form-field>
         <mat-label>Subreddit</mat-label>
-        <mat-select [(value)]="currentSubreddit" (selectionChange)="onSubredditChange($event)">
+        <mat-select [(value)]="currentSubreddit" (selectionChange)="onSubredditChange($event.value)">
           <mat-select-trigger>
             <img class="subreddit-icon" [src]="currentSubreddit?.img">
             {{currentSubreddit?.name | titlecase}}
@@ -64,14 +64,13 @@
             <img class="subreddit-icon" [src]="subreddit.img">
             {{subreddit.name | titlecase}}
           </mat-option>
-          <mat-option (click)="setCustomSubreddit($event)">Custom</mat-option>
+          <mat-option  [value]="{ name: customSubredditName }" (click)="setCustomSubreddit($event)">Custom</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field *ngIf="customSubreddit">
         <span matPrefix>/r/</span>
         <mat-label>Subreddit</mat-label>
-        <input matInput placeholder="videos" [(value)]="currentSubreddit">
-        <mat-icon (click)="changeSubreddit(currentSubreddit)">delete</mat-icon>
+        <input matInput placeholder="videos" [(value)]="customSubredditName" (input)="onCustomSubredditChange({ name: $event.target.value})">
       </mat-form-field>
 
       <mat-form-field>
@@ -107,6 +106,8 @@
         </mat-select>
       </mat-form-field>
 
+      <ng-container *ngIf="videos">
+
       <div class="video-list">
         <div class="video-thumbnail" *ngFor="let video of videos" [class.playing]="video.playing"
           [class.watched]="video.watched" [style.backgroundImage]="'url(' + video.media.oembed.thumbnail_url + ')'"
@@ -118,7 +119,9 @@
         <mat-divider style="padding: 1px;"></mat-divider>
       </div>
 
-      <button mat-button (click)="loadMore()">Load More</button>
+      <p *ngIf="videos.length == 0">No videos for this subreddit.</p>
+      <button *ngIf="videos.length > 0" mat-button (click)="loadMore()">Load More</button>
+    </ng-container>
     </div>
   </mat-drawer>
 
